tests/ui/structured_non_literal.stderr
error: expected string literal
 --> tests/ui/structured_non_literal.rs:4:39
  |
4 | const MODEL: &str = structured_model!(MODEL_ID);
  |                                       ^^^^^^^^
